@@ -1,19 +1,11 @@
 package it.niedermann.nextcloud.deck.data.repository;
 
-import java.time.LocalDateTime;
+import java.time.OffsetDateTime;
 import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
 
-import it.niedermann.nextcloud.deck.domain.model.Attachment;
-import it.niedermann.nextcloud.deck.domain.model.Board;
-import it.niedermann.nextcloud.deck.domain.model.Card;
-import it.niedermann.nextcloud.deck.domain.model.Color;
-import it.niedermann.nextcloud.deck.domain.model.Column;
-import it.niedermann.nextcloud.deck.domain.model.Comment;
-import it.niedermann.nextcloud.deck.domain.model.Label;
-import it.niedermann.nextcloud.deck.domain.model.User;
+import it.niedermann.nextcloud.deck.domain.model.*;
 
 public interface MockData {
 
@@ -37,16 +29,16 @@ public interface MockData {
     };
 
     Board[] MOCK_BOARDS = new Board[]{
-            new Board(new Board.ID(1), "Board #1", MOCK_COLORS[1], LocalDateTime.now(), new Board.Permissions(true, true, true, true)),
-            new Board(new Board.ID(2), "Board #2", MOCK_COLORS[2], LocalDateTime.now(), new Board.Permissions(true, false, true, false)),
-            new Board(new Board.ID(3), "Board #3", MOCK_COLORS[3], LocalDateTime.now(), new Board.Permissions(true, false, false, true)),
-            new Board(new Board.ID(4), "Board #4", MOCK_COLORS[4], LocalDateTime.now(), new Board.Permissions(true, false, false, false)),
-            new Board(new Board.ID(5), "Board #5", MOCK_COLORS[5], LocalDateTime.now(), new Board.Permissions(true, true, true, false)),
-            new Board(new Board.ID(6), "Board #6", MOCK_COLORS[6], LocalDateTime.now(), new Board.Permissions(true, true, true, false)),
-            new Board(new Board.ID(7), "Board #7", MOCK_COLORS[7], LocalDateTime.now(), new Board.Permissions(true, true, true, true)),
-            new Board(new Board.ID(8), "Board #8", MOCK_COLORS[8], LocalDateTime.now(), new Board.Permissions(true, true, true, true)),
-            new Board(new Board.ID(9), "Board #9", MOCK_COLORS[9], LocalDateTime.now(), new Board.Permissions(true, true, true, true)),
-            new Board(new Board.ID(10), "Board #10", MOCK_COLORS[10],LocalDateTime.now(),  new Board.Permissions(true, true, true, true))
+            new Board(new Board.ID(1), "Board #1", MOCK_COLORS[1], new Board.Permissions(true, true, true, true)),
+            new Board(new Board.ID(2), "Board #2", MOCK_COLORS[2], new Board.Permissions(true, false, true, false)),
+            new Board(new Board.ID(3), "Board #3", MOCK_COLORS[3], new Board.Permissions(true, false, false, true)),
+            new Board(new Board.ID(4), "Board #4", MOCK_COLORS[4], new Board.Permissions(true, false, false, false)),
+            new Board(new Board.ID(5), "Board #5", MOCK_COLORS[5], new Board.Permissions(true, true, true, false)),
+            new Board(new Board.ID(6), "Board #6", MOCK_COLORS[6], new Board.Permissions(true, true, true, false)),
+            new Board(new Board.ID(7), "Board #7", MOCK_COLORS[7], new Board.Permissions(true, true, true, true)),
+            new Board(new Board.ID(8), "Board #8", MOCK_COLORS[8], new Board.Permissions(true, true, true, true)),
+            new Board(new Board.ID(9), "Board #9", MOCK_COLORS[9], new Board.Permissions(true, true, true, true)),
+            new Board(new Board.ID(10), "Board #10", MOCK_COLORS[10], new Board.Permissions(true, true, true, true))
     };
 
     Label[] MOCK_LABELS = new Label[]{
@@ -79,53 +71,34 @@ public interface MockData {
     };
 
     Comment[] MOCK_COMMENTS = new Comment[]{
-            new Comment(new Comment.ID(1), new Card.ID(1), new User.ID("jdoe"), LocalDateTime.now(), "This is a creative comment #1.", null),
-            new Comment(new Comment.ID(2), new Card.ID(1), new User.ID("jdoe"), LocalDateTime.now(), "This is a creative comment #2.", null),
-            new Comment(new Comment.ID(3), new Card.ID(1), new User.ID("jdoe"), LocalDateTime.now(), "This is a creative comment #3.", null),
-            new Comment(new Comment.ID(4), new Card.ID(2), new User.ID("smith"), LocalDateTime.now(), "This is a creative comment #1.", null),
-            new Comment(new Comment.ID(5), new Card.ID(2), new User.ID("smith"), LocalDateTime.now(), "This is a creative comment #2.", null),
-            new Comment(new Comment.ID(6), new Card.ID(2), new User.ID("jdoe"), LocalDateTime.now(), "This is a creative comment #3.", null),
-            new Comment(new Comment.ID(7), new Card.ID(3), new User.ID("smith"), LocalDateTime.now(), "This is a creative comment.", null),
-            new Comment(new Comment.ID(8), new Card.ID(3), new User.ID("jdoe"), LocalDateTime.now(), "This is a creative comment.", null),
-            new Comment(new Comment.ID(9), new Card.ID(4), new User.ID("smith"), LocalDateTime.now(), "This is a creative comment.", null),
-            new Comment(new Comment.ID(10), new Card.ID(5), new User.ID("smith"), LocalDateTime.now(), "This is a creative comment.", null),
-            new Comment(new Comment.ID(11), new Card.ID(6), new User.ID("jdoe"), LocalDateTime.now(), "This is a creative comment.", null),
+            new Comment(new Comment.ID(1), new Card.ID(1), new User.ID("jdoe"), OffsetDateTime.now(), "This is a creative comment #1."),
+            new Comment(new Comment.ID(2), new Card.ID(1), new User.ID("jdoe"), OffsetDateTime.now(), "This is a creative comment #2."),
+            new Comment(new Comment.ID(3), new Card.ID(1), new User.ID("jdoe"), OffsetDateTime.now(), "This is a creative comment #3."),
+            new Comment(new Comment.ID(4), new Card.ID(2), new User.ID("smith"), OffsetDateTime.now(), "This is a creative comment #1."),
+            new Comment(new Comment.ID(5), new Card.ID(2), new User.ID("smith"), OffsetDateTime.now(), "This is a creative comment #2."),
+            new Comment(new Comment.ID(6), new Card.ID(2), new User.ID("jdoe"), OffsetDateTime.now(), "This is a creative comment #3."),
+            new Comment(new Comment.ID(7), new Card.ID(3), new User.ID("smith"), OffsetDateTime.now(), "This is a creative comment."),
+            new Comment(new Comment.ID(8), new Card.ID(3), new User.ID("jdoe"), OffsetDateTime.now(), "This is a creative comment."),
+            new Comment(new Comment.ID(9), new Card.ID(4), new User.ID("smith"), OffsetDateTime.now(), "This is a creative comment."),
+            new Comment(new Comment.ID(10), new Card.ID(5), new User.ID("smith"), OffsetDateTime.now(), "This is a creative comment."),
+            new Comment(new Comment.ID(11), new Card.ID(6), new User.ID("jdoe"), OffsetDateTime.now(), "This is a creative comment."),
     };
 
     List<Card> MOCK_CARDS = List.of(
-            new Card(new Card.ID(0), new Card.RemoteID(100), new Column.ID(1), LocalDateTime.now(), 0, "Card-Title #0", "Card-Description 0 Lorem Ipsum Dolor sit Amet", Set.of(new Label.ID(1), new Label.ID(2)), Set.of(new User.ID("jdoe")), Collections.emptyList(), LocalDateTime.now(), null, null, null, false, false, 0, 3),
-            new Card(new Card.ID(1), new Card.RemoteID(101), new Column.ID(1), LocalDateTime.now(), 1, "Card-Title #1", "", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), LocalDateTime.now(), null, null, null, false, false, 0, 0),
-            new Card(new Card.ID(2), null, new Column.ID(1), LocalDateTime.now(), 2, "Card-Title #2", "- [ ] Check 1\n- [x] Check 2\n- [ ] Check 3", Set.of(new Label.ID(3)), Set.of(new User.ID("jdoe")), Collections.emptyList(), LocalDateTime.now(), null, null, null, false, false, 0, 4),
-            new Card(new Card.ID(3), new Card.RemoteID(103), new Column.ID(1), LocalDateTime.now(), 3, "Card-Title #3", "Card-Description 3 Lorem Ipsum Dolor sit Amet", Set.of(new Label.ID(4), new Label.ID(5)), Set.of(new User.ID("smith")), Collections.emptyList(), LocalDateTime.now(), null, null, null, false, false, 0, 6),
-            new Card(new Card.ID(4), null, new Column.ID(2), LocalDateTime.now(), 4, "Card-Title #4", "Card-Description 4 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), LocalDateTime.now(), null, null, null, false, false, 0, 0),
-            new Card(new Card.ID(5), new Card.RemoteID(105), new Column.ID(2), LocalDateTime.now(), 5, "Card-Title #5", "Card-Description 5 Lorem Ipsum Dolor sit Amet", Set.of(new Label.ID(1)), Collections.emptySet(), Collections.emptyList(), LocalDateTime.now(), null, null, null, false, false, 0, 1),
-            new Card(new Card.ID(6), null, new Column.ID(3), LocalDateTime.now(), 6, "Card-Title #6", "Card-Description 6 Lorem Ipsum Dolor sit Amet", Set.of(new Label.ID(6), new Label.ID(7)), Collections.emptySet(), Collections.emptyList(), LocalDateTime.now(), null, null, null, false, false, 0, 0),
-            new Card(new Card.ID(7), new Card.RemoteID(107), new Column.ID(3), LocalDateTime.now(), 7, "Card-Title #7", "Card-Description 7 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), LocalDateTime.now(), null, null, null, false, false, 0, 0),
-            new Card(new Card.ID(8), null, new Column.ID(4), LocalDateTime.now(), 8, "Card-Title #8", "Card-Description 8 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), LocalDateTime.now(), null, null, null, false, false, 0, 6),
-            new Card(new Card.ID(9), new Card.RemoteID(109), new Column.ID(9), LocalDateTime.now(), 9, "Card-Title #9", "Card-Description 9 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), LocalDateTime.now(), null, null, null, false, false, 0, 0)
+            new Card(new Card.ID(0), new Card.RemoteID(100), new Column.ID(1), OffsetDateTime.now(), 0, "Card-Title #0", "Card-Description 0 Lorem Ipsum Dolor sit Amet", Set.of(new Label.ID(1), new Label.ID(2)), Set.of(new User.ID("jdoe")), Collections.emptyList(), false, false, 0, 3),
+            new Card(new Card.ID(1), new Card.RemoteID(101), new Column.ID(1), OffsetDateTime.now(), 1, "Card-Title #1", "", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), false, false, 0, 0),
+            new Card(new Card.ID(2), null, new Column.ID(1), OffsetDateTime.now(), 2, "Card-Title #2", "- [ ] Check 1\n- [x] Check 2\n- [ ] Check 3", Set.of(new Label.ID(3)), Set.of(new User.ID("jdoe")), Collections.emptyList(), false, false, 0, 4),
+            new Card(new Card.ID(3), new Card.RemoteID(103), new Column.ID(1), OffsetDateTime.now(), 3, "Card-Title #3", "Card-Description 3 Lorem Ipsum Dolor sit Amet", Set.of(new Label.ID(4), new Label.ID(5)), Set.of(new User.ID("smith")), Collections.emptyList(), false, false, 0, 6),
+            new Card(new Card.ID(4), null, new Column.ID(2), OffsetDateTime.now(), 4, "Card-Title #4", "Card-Description 4 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), false, false, 0, 0),
+            new Card(new Card.ID(5), new Card.RemoteID(105), new Column.ID(2), OffsetDateTime.now(), 5, "Card-Title #5", "Card-Description 5 Lorem Ipsum Dolor sit Amet", Set.of(new Label.ID(1)), Collections.emptySet(), Collections.emptyList(), false, false, 0, 1),
+            new Card(new Card.ID(6), null, new Column.ID(3), OffsetDateTime.now(), 6, "Card-Title #6", "Card-Description 6 Lorem Ipsum Dolor sit Amet", Set.of(new Label.ID(6), new Label.ID(7)), Collections.emptySet(), Collections.emptyList(), false, false, 0, 0),
+            new Card(new Card.ID(7), new Card.RemoteID(107), new Column.ID(3), OffsetDateTime.now(), 7, "Card-Title #7", "Card-Description 7 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), false, false, 0, 0),
+            new Card(new Card.ID(8), null, new Column.ID(4), OffsetDateTime.now(), 8, "Card-Title #8", "Card-Description 8 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), false, false, 0, 6),
+            new Card(new Card.ID(9), new Card.RemoteID(109), new Column.ID(9), OffsetDateTime.now(), 9, "Card-Title #9", "Card-Description 9 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), false, false, 0, 0)
     );
 
     Attachment[] MOCK_ATTACHMENTS = new Attachment[]{
-            new Attachment(new Attachment.ID(1), new Card.ID(1), "Sample File", LocalDateTime.now(), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(310_340), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(2), new Card.ID(1), "Sample Image", LocalDateTime.now().minusDays(1).minusHours(8).minusMinutes(38), new User.ID("smith"), Optional.empty(), new Attachment.FileSize(140_000_000), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(3), new Card.ID(1), "Another image", LocalDateTime.now().minusDays(10).minusHours(2).minusMinutes(17), new User.ID("smith"), Optional.empty(), new Attachment.FileSize(340_509_000), "image/jpg", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(4), new Card.ID(1), "Sample File", LocalDateTime.now(), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(310_340), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(5), new Card.ID(1), "Sample Image", LocalDateTime.now().minusDays(1).minusHours(8).minusMinutes(38), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(140_000_000), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(6), new Card.ID(2), "Another image", LocalDateTime.now().minusDays(10).minusHours(2).minusMinutes(17), new User.ID("smith"), Optional.empty(), new Attachment.FileSize(340_509_000), "image/jpg", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(7), new Card.ID(2), "Sample File", LocalDateTime.now(), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(310_340), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(8), new Card.ID(2), "Sample Image", LocalDateTime.now().minusDays(1).minusHours(8).minusMinutes(38), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(140_000_000), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(9), new Card.ID(3), "Another image", LocalDateTime.now().minusDays(10).minusHours(2).minusMinutes(17), new User.ID("smith"), Optional.empty(), new Attachment.FileSize(340_509_000), "image/jpg", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(10), new Card.ID(4), "Sample File", LocalDateTime.now(), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(310_340), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(11), new Card.ID(4), "Sample Image", LocalDateTime.now().minusDays(1).minusHours(8).minusMinutes(38), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(140_000_000), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(12), new Card.ID(6), "Another image", LocalDateTime.now().minusDays(10).minusHours(2).minusMinutes(17), new User.ID("smith"), Optional.empty(), new Attachment.FileSize(340_509_000), "image/jpg", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(13), new Card.ID(6), "Sample File", LocalDateTime.now(), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(310_340), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(14), new Card.ID(6), "Sample Image", LocalDateTime.now().minusDays(1).minusHours(8).minusMinutes(38), new User.ID("smith"), Optional.empty(), new Attachment.FileSize(140_000_000), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(15), new Card.ID(7), "Another image", LocalDateTime.now().minusDays(10).minusHours(2).minusMinutes(17), new User.ID("smith"), Optional.empty(), new Attachment.FileSize(340_509_000), "image/jpg", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(16), new Card.ID(7), "Sample File", LocalDateTime.now(), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(310_340), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(17), new Card.ID(8), "Sample Image", LocalDateTime.now().minusDays(1).minusHours(8).minusMinutes(38), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(140_000_000), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(18), new Card.ID(9), "Another image", LocalDateTime.now().minusDays(10).minusHours(2).minusMinutes(17), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(340_509_000), "image/jpg", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(19), new Card.ID(9), "Sample File", LocalDateTime.now(), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(310_340), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(20), new Card.ID(9), "Sample Image", LocalDateTime.now().minusDays(1).minusHours(8).minusMinutes(38), new User.ID("jdoe"), Optional.empty(), new Attachment.FileSize(140_000_000), "image/png", Optional.empty(), Optional.empty()),
-            new Attachment(new Attachment.ID(21), new Card.ID(9), "Another image", LocalDateTime.now().minusDays(10).minusHours(2).minusMinutes(17), new User.ID("smith"), Optional.empty(), new Attachment.FileSize(340_509_000), "image/jpg", Optional.empty(), Optional.empty()),
+            new Attachment(new Attachment.ID(1), new Card.ID(1), "Sample File", OffsetDateTime.now(), new User.ID("jdoe"), new Attachment.FileSize(310_340), "image/png"),
+            new Attachment(new Attachment.ID(2), new Card.ID(1), "Sample Image", OffsetDateTime.now(), new User.ID("smith"), new Attachment.FileSize(140_000_000), "image/png")
     };
 }
